# tikibase

./: .contest.json  .gitignore  .prettierignore_make  .testconfig.json  .tool-versions  1.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  RELEASE.md  dprint.json  rust-toolchain.toml  rustfmt.toml  test.md  tikibase.schema.json
.github/workflows/: ci.yml  release.yml
doc/: tikibase.schema.json
features/: broken_image.feature  broken_link_to_doc.feature  broken_links_to_docs.feature  capitalizations.feature  codeblock_indented.feature  codeblock_toplevel.feature  document_empty.feature  document_unlinked.feature  documents_unlinked_allowed.feature  duplicate_sections.feature  empty_sections.feature  example.feature  file_hidden.feature  file_ignored.feature  footnote_missing.feature  footnote_unused.feature  hidden_file.feature  image_external.feature  image_internal_broken.feature  image_internal_valid.feature  image_orphaned.feature  image_valid.feature  init.feature  link_directory_broken.feature  link_directory_valid.feature  link_document_broken.feature  link_document_valid.feature  link_escapes_root.feature  link_external.feature  link_internal_broken.feature  link_internal_valid.feature  link_to_anchor_in_other_doc_valid.feature  link_to_anchor_in_other_doc_wrong.feature  link_to_anchor_in_same_doc_valid.feature  link_to_anchor_in_same_doc_wrong.feature  link_to_same_document.feature  link_to_subfolder.feature  link_to_valid_anchor.feature  link_to_wrong_anchor.feature  link_without_destination.feature  (+33 more)
features/check/: capitalizations.feature
scripts/: install_actionlint
src/: args.rs  check.rs  cli.rs  config.rs  errors.rs  fix.rs  help.rs  input.rs  issue.rs  issues.rs  lib.rs  main.rs  message.rs  outcome.rs  output.rs  prelude.rs  stats.rs
src/check/: checker.rs  dir_1.rs  dir_2.rs  doc_1.rs  doc_2.rs  empty_sections.rs  issue.rs  location.rs  mod.rs  section_capitalization.rs  state_1.rs  state_2.rs
src/check/scanners/: duplicate_sections.rs  empty_section_content.rs  empty_section_title.rs  footnotes.rs  illegal_sections.rs  links.rs  mod.rs  obsolete_occurrences.rs  occurrences.rs  orphaned_resource.rs  section_capitalization.rs  section_level.rs  unordered_sections.rs
src/checks/: doc_links.rs  image_orphaned.rs  link_broken.rs  mod.rs  occurrences.rs  section_capitalization.rs  section_duplicate.rs  section_empty.rs  section_no_header.rs  section_order.rs  section_type.rs  sources_missing.rs
src/checks/issues/: broken_image.rs  broken_link.rs  duplicate_section.rs  empty_section.rs  link_to_same_document.rs  link_without_destination.rs  missing_link.rs  missing_source.rs  mixed_section_capitalization.rs  mod.rs  obsolete_link.rs  orphaned_resource.rs  section_without_header.rs  unknown_section.rs  (+1 more)
src/commands/: check.rs  fix.rs  help.rs  init.rs  json_schema.rs  mod.rs  pitstop.rs  search.rs  stats.rs  version.rs
src/core/: config.rs  document.rs  error.rs  errors.rs  line.rs  link.rs  mod.rs  persistence.rs  resource.rs  section.rs  tikibase.rs
src/database/: dir_chain.rs  directory.rs  doc_links.rs  document.rs  footnote.rs  footnotes.rs  image.rs  line.rs  link.rs  mod.rs  paths.rs  reference.rs  resource.rs  section.rs  source_reference.rs  tikibase.rs
src/domain/: mod.rs  path_relative_to_root.rs  relative_path.rs
src/filesystem/: common_ancestor.rs  dirname.rs  mod.rs  normalize.rs  relative.rs
src/fix/: empty_section.rs  inconsistent_levels.rs  missing_links.rs  mix_cap_section.rs  mod.rs  obsolete_occurrences_section.rs  unordered_sections.rs
src/fixers/: empty_section.rs  missing_link.rs  missing_links.rs  mod.rs  obsolete_link.rs  obsolete_occurrences_section.rs  unordered_sections.rs
src/fspath/: has_extension.rs  join.rs  mod.rs  normalize.rs
src/help/: mod.rs
src/helpers/: mod.rs  string.rs
src/issues/: broken_image.rs  broken_link.rs  duplicate_section.rs  empty_section.rs  empty_section_content.rs  link_to_same_document.rs  link_without_destination.rs  missing_link.rs  missing_source.rs  mixed_section_capitalization.rs  mod.rs  obsolete_link.rs  orphaned_resource.rs  section_without_header.rs  unknown_section.rs  unordered_sections.rs
src/output/: message.rs  messages.rs  mod.rs
src/pitstop/: mod.rs
src/probes/: broken_links.rs  doc_links.rs  duplicate_sections.rs  empty_sections.rs  image_orphaned.rs  link_broken.rs  mod.rs  occurrences.rs  outcome.rs  result.rs  section_capitalization.rs  section_duplicate.rs  section_empty.rs  section_no_header.rs  section_order.rs  section_type.rs  section_without_header.rs  sources_missing.rs
src/process/: broken_links.rs  duplicate_sections.rs  empty_sections.rs  link_targets.rs  mod.rs  section_capitalization.rs
src/scan/: duplicate_sections.rs  empty_section_content.rs  empty_section_title.rs  footnotes.rs  footnotes_missing.rs  illegal_sections.rs  image_orphaned.rs  link_broken.rs  links.rs  mod.rs  occurrences.rs  section_capitalization.rs  section_duplicate.rs  section_empty.rs  section_level.rs  section_order.rs  section_title.rs  section_type.rs  section_without_header.rs  sources_missing.rs  unordered_sections.rs
src/search/: mod.rs  result.rs
src/stats/: mod.rs
src/test/: create_file.rs  empty_config.rs  load_file.rs  mod.rs  tmp_dir.rs  trim_end.rs
src/testhelpers/: mod.rs
tests/: cucumber.rs
tools/: package.json  rta
(+11 files in other folders)
