[package]
name = "tikibase"
version = "0.6.1"
authors = ["Kevin Goslar <kevin.goslar@gmail.com>"]
edition = "2021"
rust-version = "1.81"

[dependencies]
ahash = "0.7.8"
big_s = "1.0.2"
clap = { version = "3.2.25", features = ["derive"] }
colored = "2.1.0"
fs-err = "2.11.0"
heck = "0.4.1"
indoc = "1.0.9"
merge = "0.1.0"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.0"
schemars = { version = "0.8.21", features = ["url"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest
test = false

[dev-dependencies]
cucumber = "0.21.1"
futures = "0.3.31"
itertools = "0.10.5"
pretty = { package = "pretty_assertions", version = "1.4.1" }

[profile.release]
strip = "symbols"
lto = true
panic = 'abort'

# We allow warnings here, the Makefile denies them.
# This way warnings don't hold up compiling and running tests,
# and also don't slip past CI.

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow" # we cast lots of values, they are usually small so we don't need to check cast problems
missing_panics_doc = "allow" # all panics indicate programmer errors and should be fixed
missing_errors_doc = "allow" # all returned errors are UserError
too_many_lines = "allow" # TODO: refactor the long functions or add ignore this problem in the code
use_self = "deny"

[lints.clippy]
derive_partial_eq_without_eq = "deny"
impl_trait_in_params = "deny"
module_name_repetitions = "deny"
redundant_pub_crate = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_to_string = "deny"
